--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,12 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
       <mat-form-field>
         <input
           matInput
           type="text"
           name="title"
-          ngModel
+          [ngModel]="post?.title"
           required
           minlength="3"
           #title="ngModel">
@@ -14,7 +15,7 @@
       <mat-form-field>
         <textarea
           name="content"
-          ngModel
+          [ngModel]="post?.content"         
           matInput
           rows="4"
           required
