--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,26 +1,26 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
       <mat-form-field>
         <input
           matInput
           type="text"
-          name="title"
-          [ngModel]="post?.title"
-          required
-          minlength="3"
-          #title="ngModel">
-          <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
+          formControlName="title">
+          <mat-error *ngIf="form.get('title').invalid">Please enter a post title.</mat-error>
       </mat-form-field>
+      <div>
+        <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+        <input type="file" #filePicker (change)="onImagePicked($event)">
+      </div>
+      <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview">
+        <img [src]="imagePreview" [alt]="form.value.title">
+      </div>
       <mat-form-field>
-        <textarea
-          name="content"
-          [ngModel]="post?.content"         
+        <textarea       
           matInput
           rows="4"
-          required
-          #content="ngModel"></textarea>
-          <mat-error *ngIf="content.invalid">Please enter a post title.</mat-error>
+          formControlName="content"></textarea>
+          <mat-error *ngIf="form.get('content').invalid">Please enter a post title.</mat-error>
       </mat-form-field>
       <button
         mat-raised-button
